--- a/css/nav.css
+++ b/css/nav.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
-nav {
+.navbar {
     font-family: Poppins;
     background-color: #96712A;
+    height: 96px;
+    left: 0px;
+    top: 0px;
+    border-radius: 0px;
+    padding: 16px 236px 16px 236px;
+    justify-content: space-between;
 }
